# retro-pico-switch

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Controller.h  GamecubeController.cpp  GamecubeController.h  N64Controller.cpp  N64Controller.h  SwitchDescriptors.cpp  SwitchDescriptors.h  controller.hpp  gamecube.cpp  gamecube.hpp  main.cpp  n64.cpp  n64.hpp  switch_descriptors.cpp  tusb_config.h
src/otherController/n64/: N64Controller.cpp
